--- a/app/sass/block/_header.scss
+++ b/app/sass/block/_header.scss
@@ -183,7 +183,6 @@
         text-align: center;
         background-color: $white;
         grid-area: menu;
-        overflow-y: auto;
         a {
             &:first-child {
                 background-color: $white;
@@ -340,7 +339,8 @@
             padding: 40px 0 0 18px;
             &::after {
                 content: "";
-                background: url("../img/icons/bg_mobile_points.svg") 0 0 no-repeat;
+                background: url("../img/icons/bg_mobile_points.svg") 0 0
+                    no-repeat;
                 position: absolute;
                 width: 700px;
                 height: 630px;
@@ -364,6 +364,15 @@
         &__logo {
             align-self: center;
             padding-left: 0;
+        }
+    }
+}
+
+@media (max-height: 350px) {
+    .header__menu {
+        overflow-y: auto;
+        &-link--current::after {
+            background-color: none;
         }
     }
 }
